# revive

./: .dockerignore  .gitignore  .gitmodules  .ignore  .llvm-version  CHANGELOG.md  CLAUDE.md  CODEREVIEW.md  Cargo.toml  Dockerfile  IR_PLAN.md  Makefile  OPT_FINDINGS_AGENT_ONE.md  OPT_FINDINGS_AGENT_TWO.md  RALPH_TASK.md  README.md  RELEASE.md  SECURITY.md  STATUS.md  build-llvm.sh  clippy.toml  clone-llvm.sh  deny.toml  emscripten-build-llvm.sh  erc20_paris.yul  eslint.config.mjs  package-lock.json  package.json  retester.sh  tmp
crates/benchmarks/: BENCHMARKS.md  BENCHMARKS_PARSE_M4PRO.md  Cargo.toml  EXECUTE.md  PREPARE.md
crates/benchmarks/benches/: compile.rs  execute.rs  lower.rs  prepare.rs
crates/benchmarks/src/: contracts.rs  lib.rs
crates/benchmarks/src/runtimes/: mod.rs  polkavm.rs
crates/builtins/: Cargo.toml  build.rs
crates/builtins/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs  module.rs  program.rs
crates/common/: Cargo.toml  README.md
crates/common/.github/workflows/: cargo-license.yaml
crates/common/src/: base.rs  bit_length.rs  byte_length.rs  contract_identifier.rs  evm_version.rs  exit_code.rs  extension.rs  keccak256.rs  lib.rs  metadata.rs  object.rs  solidity_selector.rs  utils.rs
crates/common/src/eravm/: address.rs  mod.rs
crates/common/src/polkavm/: address.rs  mod.rs
crates/differential/: Cargo.toml  genesis.json
crates/differential/src/: go_duration.rs  lib.rs
crates/explorer/: Cargo.toml  README.md
crates/explorer/src/: analyzer.rs  api.rs  assembly_analyzer.rs  dwarfdump.rs  dwarfdump_analyzer.rs  lib.rs  location_mapper.rs  main.rs  objdump.rs  source_mapper.rs  web_server.rs  yul_phaser.rs
crates/explorer/static/: index.html
crates/explorer/static/css/: main.css
crates/explorer/static/js/: main.js
crates/fuzz/: Cargo.toml
crates/fuzz/src/: differential.rs  generator.rs  lib.rs  observe.rs  pipeline.rs  stale.rs  templates.rs
crates/fuzz/src/yul/: differential.rs  generator.rs  mod.rs  observe.rs  pipeline.rs
crates/fuzzer/: Cargo.toml
crates/fuzzer/src/: main.rs
crates/integration/: Cargo.toml  codesize.json  codesize_newyork.json
crates/integration/contracts/: AddModMulMod.sol  AddModZeroProbe.yul  ArrayProbe.sol  Balance.sol  BaseFee.sol  Baseline.sol  Bitwise.sol  Block.sol  BlockHash.sol  ByteOobProbe.yul  Call.sol  CallGas.sol  Calldata.sol  CalldataCopyFmp.yul  CalldataCopySrcNarrow.yul  CalldatacopyFmpDynBug.yul  CalldataloadOOB.yul  CallerOriginAliasing.sol  CallvalueRevertData.yul  Coinbase.sol  Computation.sol  ConstReturnOverflowBug.sol  Context.sol  CopyOverlapBug.sol  CountLeadingZeros.sol  Create.sol  Create2.sol  Crypto.sol  CustomErrorArgs.sol  CustomErrorDupArg.yul  DeadStoreOverlapBug.yul  Delegate.sol  DelegateCaller.sol  DivBothConst.yul  DivModMulmodConst.sol  DivisionArithmetics.sol  DivisionArithmeticsConst.sol  ERC20.sol  ERC7201.sol  EncodePackedHash.sol  (+116 more)
crates/integration/src/: cases.rs  exact_repro.rs  lib.rs  mock_runtime.rs  polkavm.rs  tests.rs
crates/ir/: Cargo.toml
crates/ir/src/: address.rs  cfg.rs  instruction.rs  lib.rs  symbol.rs
crates/ir/src/analysis/: control_flow.rs  dominance.rs  evm_bytecode.rs  mod.rs  tail_edges.rs  types.rs
crates/ir/src/pass/: dead_code.rs  lift.rs  mod.rs
crates/linker/: Cargo.toml
crates/linker/src/: elf.rs  lib.rs  pvm.rs
crates/lld-sys/: Cargo.toml  build.rs
crates/lld-sys/src/: lib.rs  linker.cpp
crates/llvm-builder/: .gitignore  Cargo.toml  README.md
crates/llvm-builder/src/: build_type.rs  builtins.rs  ccache_variant.rs  lib.rs  llvm_path.rs  llvm_project.rs  lock.rs  sanitizer.rs  target_env.rs  target_triple.rs  utils.rs
crates/llvm-builder/src/revive_llvm/: arguments.rs  main.rs
crates/llvm-builder/tests/: build.rs  checkout.rs  clean.rs  clone.rs  common.rs  invalid_invocation.rs  version.rs
crates/llvm-builder/tests/common/: mod.rs
crates/llvm-context/: Cargo.toml
crates/llvm-context/src/: lib.rs  memory.rs
crates/llvm-context/src/eravm/: const.rs  (+2 more)
crates/newyork/: Cargo.toml  newyork_status.md
crates/newyork/src/: compound_outlining.rs  from_yul.rs  guard_narrow.rs  heap_opt.rs  inline.rs  ir.rs  lib.rs  mapping_access_outlining.rs  mem_opt.rs  printer.rs  simplify.rs  ssa.rs  to_llvm.rs  type_inference.rs  validate.rs
crates/pallet-contracts-pvm-llapi/: Cargo.toml  build.rs
crates/pallet-contracts-pvm-llapi/src/: calling_convention.rs  lib.rs  polkavm_guest.c  polkavm_guest.h  polkavm_guest.rs
crates/resolc/: BENCHMARKS.md  BENCHMARKS_M4PRO.md  Cargo.toml  build.rs
crates/resolc/benches/: compile.rs  utils.rs
crates/resolc/src/: cli_utils.rs  const.rs  lib.rs  linker.rs  missing_libraries.rs  test_utils.rs
crates/rul/: Cargo.toml
crates/rul-runtime-library/: Cargo.toml
crates/rul-runtime-library/src/: config.rs  configuration.rs  lib.rs  memory.rs
crates/rul/src/: builder.rs  lib.rs  yul_library.rs
crates/runner/: Cargo.toml  README.md
crates/runner/fixtures/: Baseline.pvm
crates/runner/src/: lib.rs  main.rs  runtime.rs  specs.rs
crates/runtime-api/: Cargo.toml  README.md  build.rs  polkavm_exports.bc  polkavm_imports.bc
crates/runtime-api/src/: calling_convention.rs  immutable_data.rs  lib.rs  polkavm_exports.c  polkavm_exports.rs  polkavm_guest.h  polkavm_imports.c  polkavm_imports.rs
crates/solc-json-interface/: Cargo.toml
crates/solc-json-interface/src/: lib.rs  warning.rs
crates/solc-json-interface/tests/: metadata_ipfs.rs
crates/solidity/: Cargo.toml  build.rs
crates/solidity/src/: const.rs  lib.rs  missing_libraries.rs  test_utils.rs  version.rs  warning.rs
crates/stdlib/: Cargo.toml  build.rs  stdlib.ll  ulongrem_knuth.c
crates/stdlib/src/: lib.rs
crates/yul/: BENCHMARKS.md  BENCHMARKS_LOWER_M4PRO.md  BENCHMARKS_M4PRO.md  Cargo.toml
crates/yul/benches/: lower.rs  make_llvm_ir.rs  parse.rs  parse_and_into_llvm.rs
crates/yul/src/: error.rs  lib.rs  visitor.rs
fuzz/: Cargo.toml  README.md  rust-toolchain.toml
fuzz/fuzz_targets/: solidity_differential.rs
(+696 files in other folders)
