[package]
name = "revive-benchmarks"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description = "revive compiler benchmarks"

[features]
default = ["bench-pvm-interpreter"]
bench-pvm-interpreter = ["revive-runner"]
bench-evm = ["revive-differential"]
bench-resolc = ["resolc"]

[dependencies]
hex = { workspace = true }
alloy-primitives = { workspace = true }

resolc = { workspace = true, optional = true }
revive-integration = { workspace = true }
revive-differential = { workspace = true, optional = true }
revive-runner = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "execute"
harness = false

[[bench]]
name = "compile"
harness = false
