[package]
name = "revive-builtins"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"
description = "compiler builtins for the revive compiler"

[build-dependencies]
revive-build-utils = { workspace = true }
