[package]
name = "revive-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { workspace = true }

revive-compilation-target = { path = "../compilation-target" }
revive-ir = { path = "../ir" }