[package]
name = "revive-common"
version = "0.1.0"
authors = [
    "Cyrill Leutwiler <cyrill@parity.io>",
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Shared constants of the revive compiler"

[lib]
doctest = false

[features]
riscv-64 = []

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [ "arbitrary_precision", "unbounded_depth" ] }
serde_stacker = { workspace = true }
