[package]
name = "revive-common"
version = "1.0.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
authors = [
    "Cyrill Leutwiler <cyrill@parity.io>",
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
]
description = "Shared constants of the revive compiler"

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
sha3 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [ "arbitrary_precision", "unbounded_depth" ] }
serde_stacker = { workspace = true }
