[package]
name = "revive-differential"
description = "utilities for differential testing the revive compiler against EVM"
version = "0.2.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
hex = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-genesis = { workspace = true }
alloy-serde = { workspace = true }
