[package]
name = "revive-fuzzer"
version = "1.0.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description = "Differential fuzzer: compares EVM (geth) vs PVM (pallet-revive) execution"
publish = false

[package.metadata.cargo-machete]
ignored = [
    "alloy-genesis",
    "polkadot-sdk",
    "revive-llvm-context",
    "revive-solc-json-interface",
]

[[bin]]
name = "revive-fuzzer"
path = "src/main.rs"

[dependencies]
resolc = { workspace = true }
revive-runner = { workspace = true }
revive-differential = { workspace = true }
revive-llvm-context = { workspace = true }
revive-solc-json-interface = { workspace = true }

alloy-primitives = { workspace = true }
alloy-genesis = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
rand = "0.9"
serde_json = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true, features = ["help", "std", "derive"] }
serde = { workspace = true, features = ["derive"] }

libc = { workspace = true }
num_cpus = { workspace = true }

polkadot-sdk.workspace = true
polkadot-sdk.features = [
    "experimental",
    "runtime",
    "pallet-revive",
]
