[package]
name = "revive-integration"
version = "0.3.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description = "revive compiler integration test cases"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }

resolc = { workspace = true }
revive-runner = { workspace = true }
revive-llvm-context = { workspace = true }

[dev-dependencies]
sha1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
