[package]
name = "revive-linker"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description = "revive compiler linker utils"

[features]
default = ["riscv-64"]
riscv-64 = []

[dependencies]
inkwell = { workspace = true }
tempfile = { workspace = true }
polkavm-linker = { workspace = true }
polkavm-common = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }

revive-builtins = { workspace = true }
lld-sys = { workspace = true }
