[package]
name = "revive-linker"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description = "revive compiler linker utils"

[dependencies]
tempfile = { workspace = true }
polkavm-linker = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }

revive-builtins = { workspace = true }
lld-sys = { workspace = true }
