[package]
name = "revive-linker"
version = "1.0.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description = "revive compiler linker utils"

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
polkavm-linker = { workspace = true }
tempfile = { workspace = true }

lld-sys = { workspace = true }
revive-builtins = { workspace = true }
