[package]
name = "lld-sys"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"
description = "bindings for ld.lld core"

[dependencies]
libc = { workspace = true }

[build-dependencies]
cc = { workspace = true }
revive-build-utils = { workspace = true }
