[package]
name = "lld-sys"
version = "1.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"
description = "bindings for ld.lld core"

[dependencies]
libc = { workspace = true }

[build-dependencies]
cc = { workspace = true }
revive-build-utils = { workspace = true }
