[package]
name = "revive-llvm-context"
version = "0.4.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
    "Cyrill Leutwiler <cyrill@parity.io>",
]
description = "Shared front end code of the revive PolkaVM compilers"

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
semver = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
num = { workspace = true }
hex = { workspace = true }
inkwell = { workspace = true }
libc = { workspace = true }
polkavm-disassembler = { workspace = true }
polkavm-common = { workspace = true }

revive-common = { workspace = true }
revive-runtime-api = { workspace = true }
revive-linker = { workspace = true }
revive-stdlib = { workspace = true }
revive-solc-json-interface = { workspace = true }
