[package]
name = "pallet-contracts-pvm-llapi"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
repository.authors = true
descritption = "Implements the low level runtime API bindings with pallet contracts"

[features]
riscv-64 = []

[dependencies]
anyhow = { workspace = true }
inkwell = { workspace = true, features = ["target-riscv", "no-libffi-linking", "llvm18-0"] }