[package]
name = "revive-runtime-api"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description = "Implements the low level runtime API bindings with pallet contracts"

[dependencies]
anyhow = { workspace = true }
inkwell = { workspace = true, features = ["target-riscv", "no-libffi-linking", "llvm18-0"] }

revive-common = { workspace = true }
