[package]
name = "revive-runtime-api"
version = "1.0.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description = "Implements the low level runtime API bindings with pallet contracts"

[dependencies]
anyhow = { workspace = true }
inkwell = { workspace = true, features = ["target-riscv", "no-libffi-linking", "llvm21-1"] }

revive-common = { workspace = true }

[build-dependencies]
revive-build-utils = { workspace = true }
